@@ -9,8 +9,7 @@ import java.text.SimpleDateFormat;
 import java.time.Instant;
 import java.util.Date;
 import java.util.List;
-import java.util.TimeZone;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 @Component
 public class CommonUtils {
@@ -23,29 +22,21 @@ public class CommonUtils {
     }
 
     public static List<String> getMonths() {
-        return List.of(new String[]{
-                "Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"});
-    }
-
-    public static String toUtc(Date date) {
-
-        SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss'Z'");
-        sdf.setTimeZone(TimeZone.getTimeZone("UTC"));
-        String utcDateString = sdf.format(date);
-        return utcDateString;
+        return List.of(
+                "Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec");
     }
 
     public List<String> fetchDistinctSubCategories() {
         return categoryRepository.fetchDistinctSubCategories();
     }
 
-    public List<Category> fetchAllCategories() {
-        return categoryRepository.findAllByOrderByCategoryAsc();
+    public List<Category> fetchAllCategories(int year, int month) {
+        return categoryRepository.findAllByOrderByCategoryAsc(year, month);
     }
 
     public Category fetchCategoryByID(Long id) {
         List<Category> categoryList = categoryRepository.findAllByOrderByMainCategoryAscSubCategoryAscCategoryAsc();
-        return categoryList.stream().filter(item -> item.getId() == id).collect(Collectors.toList()).get(0);
+        return categoryList.stream().filter(item -> Objects.equals(item.getId(), id)).toList().get(0);
     }
 
     public static String getMonthYear(Instant date) {
